@startuml
class TodoItem{
__private data__
private String title;
private String status;
private String description;
private LocalDate dueDate;
__Constructor__
+public TodoItem(String title, String status, String description, LocalDate dueDate)
..Setters..
+public void setTitle(String title)
+public void setDescription(String description)
+public void setStatus(String status)
+public void setDueDate(LocalDate dueDate)
..Getters..
+public String getTitle()
+public String getDescription()
+public String getStatus()
+public LocalDate getDueDate()
}

TodoListOfItems *-- TodoItem

class TodoListOfItems{
__private data__
static TodoListOfItems instance = new TodoListOfItems();
static String filename = "TodoListItems.txt";
..Setters..
+public void addTodoItem(TodoItem item)
..Getters..
+public ObservableList<TodoItem> getTodoItems()
..Other Methods..
+public static TodoListOfItems getInstance()
+private TodoListOfItems()
+public void loadTodoItems() throws IOException
+public void storeTodoItems() throws IOException
+public void deleteTodoItem(TodoItem item)

}

class Controller{
..Methods..
+public void initialize()
+public void showNewItemDialog()
+public void handleKeyPressed(KeyEvent keyEvent)
+public void handleClickListView()
+public void deleteItem(TodoItem item)
+public void handleFilterButton()
+public void handleExit()
+public void handle(ActionEvent event)
+public void changed(ObservableValue<? extends TodoItem> observable, TodoItem oldValue, TodoItem newValue)
+public boolean test(TodoItem todoItem)
+public int compare(TodoItem o1, TodoItem o2)
+public ListCell<TodoItem> call(ListView<TodoItem> param)

}

Controller *-- DialogController

class DialogController{
..Methods..
+public TodoItem processResults()
}

Controller *-- TodoListOfItems

DialogController *-- TodoItem

@enduml